--- a/baekjoon/bronze/test.ipynb
+++ b/baekjoon/bronze/test.ipynb
@@ -112,6 +112,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "1\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2]\n",
+    "for _ in range(3):\n",
+    "    try:\n",
+    "        print(a.pop())\n",
+    "    except IndexError:\n",
+    "        print(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "queue = deque([1,2,3])\n",
+    "print(queue[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
